[package]
name = "ats-intc-executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axstd = {path = "../../ulib/axstd", features = ["paging", "alloc"]}
crossbeam-utils = {version = "0.8", default-features = false}
ats-intc = {path = "../../../ats-intc", default-features = false, features = ["no-simul"]}