[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

modified = []
original = []
output = []
default = ["modified"]

[dependencies]
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
axstd = { path = "../../ulib/axstd", features = ["paging", "alloc", "multitask", "irq", "net"] }
