[package]
name = "arceos-parallel"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

axstd = ["dep:axstd"]
default = ["axstd"]

[dependencies]
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
axstd = { path = "../../../ulib/axstd", features = ["alloc", "multitask", "irq"], optional = true }
